--- a/Reviews/Views/Shared/_Layout.cshtml
+++ b/Reviews/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 <body>
 <header class="navbar navbar-light bg-light fixed-top reviews-navbar">
     <a href="/">
-        <img src="../../Content/stackReviews.png" style="width: 10rem;">
+        <img src="../../Content/stackReviews.png" class="logo">
     </a>
     <nav class="navbar-nav-scroll">
         <ul class="navbar-nav bd-navbar-nav flex-row">
@@ -58,7 +58,7 @@
 </div>
 <footer class="sticky-bottom" style="text-align: center;">
     <div id="temperatureDiv">
-        <span>Weather in Tel Aviv: </span>
+        <span>Temperature in Tel Aviv: </span>
         <p>getting info...</p>
     </div>
     <div>
