--- a/Reviews/Content/Site.css
+++ b/Reviews/Content/Site.css
@@ -6,6 +6,22 @@
     white-space: normal;
 }
 
+.logo {
+    width: 10rem;
+    transition: all 0.3s ease;
+}
+
+.logo:hover {
+    -webkit-transform: rotateZ(-30deg);
+    -ms-transform: rotateZ(-30deg);
+    transform: rotateZ(-30deg);
+}
+
+.welcome {
+    text-shadow: 0px 0px 15px #1968b3;
+    color: #1081f0;
+}
+
 @font-face {
     src: url("/fonts/glyphicons-halflings-regular.woff");
 }
