--- a/Reviews/Views/Home/Contact.cshtml
+++ b/Reviews/Views/Home/Contact.cshtml
@@ -1,8 +1,10 @@
-﻿<script src="https://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyDbK3-PKcz9w3uDXkR49HxkIYy5I-2tR8k"
-        type="text/javascript"></script>
+﻿@using Reviews.Models
 @{
     ViewBag.Title = "Contact Us";
 }
+
+@model string
+
 <h1>
     @ViewBag.Title
 </h1>
@@ -18,7 +20,7 @@
         <address>
             Our University at 450 Serra Mall, Stanford, CA 94305, USA
         </address>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12673.901771642968!2d-122.164905!3d37.4258717!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fbb2a678bea9d%3A0x29cdf01a44fc687f!2z15DXldeg15nXkdeo16HXmdeY16og16HXmNeg16TXldeo15M!5e0!3m2!1siw!2sil!4v1509213398794" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps?q=@(ViewBag.Location)&output=embed" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 </div>
 
