--- a/Reviews/Views/Comments/Edit.cshtml
+++ b/Reviews/Views/Comments/Edit.cshtml
@@ -21,10 +21,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.RecipeId, "RecipeID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ReviewID, "ReviewID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("RecipeID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.RecipeId, "", new { @class = "text-danger" })
+                @Html.DropDownList("ReviewID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ReviewID, "", new { @class = "text-danger" })
             </div>
         </div>
 
