--- a/Reviews/Views/Reviews/Delete.cshtml
+++ b/Reviews/Views/Reviews/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Delete";
 }
 
-<h6 style="margin: 20px 0">Are you sure you want to delete this recipe?</h6>
+<h6 style="margin: 20px 0">Are you sure you want to delete this review?</h6>
 <div>
     <dl class="dl-horizontal" style="margin: 20px 0">
         <dt>
