--- a/Reviews/Views/Reviews/Details.cshtml
+++ b/Reviews/Views/Reviews/Details.cshtml
@@ -43,11 +43,11 @@
         </dd>
 
     </dl>
-</div>x
+</div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
 
-<a href="https://twitter.com/intent/tweet?screen_name=stackReviews&text=Read this review for @Model.Title http://localhost:53013/Recipes/Details/@Model.Id" class="twitter-mention-button" data-show-count="false">Tweet to stackReviews</a>
+<a href="https://twitter.com/intent/tweet?screen_name=stackReviews&text=Read this review for @Model.Title http://localhost:53013/Reviews/Details/@Model.Id" class="twitter-mention-button" data-show-count="false">Tweet to stackReviews</a>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
