--- a/Reviews/Views/User/Stats.cshtml
+++ b/Reviews/Views/User/Stats.cshtml
@@ -6,28 +6,8 @@
 }
 
 @{
-
-    // Distinct users
-    var distinctUsers = Model.Select(x => new
-    {
-        UserName = x.UserName,
-        FirstName = x.FirstName,
-        LastName = x.LastName,
-        ID = x.Id
-    }).Distinct();
-
-    // Comments and reviews
-    var usersReviewsInfo = distinctUsers.Select(user => new
-    {
-        UserID = user.ID,
-        UserName = user.UserName,
-        FirstName = user.FirstName,
-        LastName = user.LastName,
-        Reviews = Model.Where(x => x.Id == user.ID).ToArray()
-    });
-
     // User and its number of reviews
-    var usersReplayCount = usersReviewsInfo.Distinct().Select(x => new { Name = x.UserName, Count = x.Reviews.Length });
+    var usersReplayCount = Model.Select(x => new { Name = x.UserName, Count = x.Reviews.Count() });
 }
 
 <table class="table">
@@ -42,12 +22,12 @@
             @Html.DisplayNameFor(model => model.LastName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Title)
+            @Html.DisplayNameFor(model => model.Reviews)
         </th>
     </tr>
 
     @{
-        foreach (var user in usersReviewsInfo)
+        foreach (var user in Model)
         {
             <tr>
                 <td>
@@ -62,17 +42,17 @@
                 <td>
                     <ul>
                         @{
-
                             foreach (var review in user.Reviews)
                             {
                                 <li>
-                                    @Html.ActionLink(review.Title, "../Reviews/DetailsByTitle", new { title = review.Title })
+                                    @Html.ActionLink(review.Title, "../Reviews/Details", new {id = review.Id})
                                 </li>
                             }
                         }
                     </ul>
                 </td>
             </tr>
+
         }
     }
 </table>
