Finished the project

--- a/Reviews/Views/User/Stats.cshtml
+++ b/Reviews/Views/User/Stats.cshtml
@@ -75,7 +75,7 @@
 
 <section id="popular-gender-graph">
     <h4>Users by gender</h4>
-    <p>Displays the users who wrote reviews by their gender</p>
+    <p>Displays the users division by their gender</p>
 </section>
 <script>
         $.ajax({
