--- a/Reviews/Views/Reviews/Search.cshtml
+++ b/Reviews/Views/Reviews/Search.cshtml
@@ -21,7 +21,7 @@
                     Title:
                 </div>
                 <div class="col-md-10">
-                    <input type="text" name="title" class="form-control" />
+                    <input type="text" name="title"/>
                 </div>
             </div>
             <div class="form-group col-md-2">
@@ -29,7 +29,7 @@
                     Content:
                 </div>
                 <div class="col-md-10">
-                    <input type="text" name="content" class="form-control" />
+                    <input type="text" name="content"/>
                 </div>
             </div>
             <div class="form-group col-md-2">
@@ -37,7 +37,7 @@
                     Date:
                 </div>
                 <div class="col-md-10">
-                    <input type="date" name="date" class="form-control" />
+                    <input type="date" name="date"/>
                 </div>
             </div>
             <div class="form-group col-md-2">
