--- a/Reviews/Views/Shared/_LoginPartial.cshtml
+++ b/Reviews/Views/Shared/_LoginPartial.cshtml
@@ -15,7 +15,7 @@
     else
     {
         <li class="nav-item" style="margin-top: 6px; margin-right: 20px">
-            <a style="color: white !important; font-size: 18px; pointer-events: none;" href="#">
+            <a style="color: black !important; font-size: 18px; pointer-events: none;" href="#">
                 Welcome @(user.FirstName + " " + user.LastName)
             </a>
         </li>
